# jenkins_sonar

./: CMakeLists.txt  Jenkinsfile  docker-compose.yml
include/: pyramid.h
src/: main.cpp  pyramid.cpp
tests/: test_pyramid.cpp
